# softsec-tatou

./: .env.sample  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  RMAP_TESTING_GUIDE.md  THREAT_MODEL.md  compose.debug.yaml  docker-compose.prod.yml  docker-compose.yml  dynamic_rmap_test.py  flag  requirements.txt  sync_repo_and_reload.sh  verify_rmap_fix.py
.github/: copilot-instructions.md
.github/workflows/: build.yml  checks.yml  default.yml  fuzzing.yml  test-ci.yml
db/: tatou.sql
falco/: tatou_rules.yaml
grafana/: prometheus.yml  promtail-config.yaml
grafana/provisioning/alerting/: alerts.yaml
grafana/provisioning/dashboards/: flask.json  tatou-security-dashboard.json
grafana/provisioning/datasources/: loki.yaml  prometheus.yaml
grafana/provisioning/preferences/: home.yaml
operational/: INCIDENT_REPORT.example.md  THREAT_MODEL.md  backup.sh  sync_repo_and_reload.sh
server/: .dockerignore  .gitignore  .secrets.baseline  API.md  Dockerfile  Group13_priv.asc  RMAP_README.md  RMAP_Testing_Guide.md  __init__.py  config_mutation.toml  dynamic_rmap_test.py  flag  generate_rmap_keys.py  mutauion1.txt  prepare_env.bat  pyproject.toml  server_priv.asc  server_pub.asc  session.json  test_rmap_client_library.py  test_rmap_complete.py  test_rmap_complete_client.py  test_rmap_curl.sh  test_rmap_e2e.py  test_rmap_gpg.py  test_rmap_infrastructure.py  test_rmap_integration.py
server/client_keys/: Group1.asc  Group7.asc  TestClient.asc  group13-private.asc
server/fuzz/: .gitignore  DISCOVERED_BUGS.md  Dockerfile  FIXED_BUGS.md  README.md  SEEDS_SUMMARY.md  __init__.py  api_fuzzer.py  common.py  fuzz_api.py  fuzz_inputs.py  fuzz_watermarking.py  inputs_fuzzer.py  requirements.txt  stateful_fuzzer.py  watermarking_fuzzer.py
server/fuzz/builders/: __init__.py  auth.py  rest_builders.py
server/fuzz/dictionaries/: api_fuzzer.dict  fuzz_pdf_apply.dict  fuzz_pdf_explore.dict  fuzz_pdf_read.dict  fuzz_rest_endpoints.dict  fuzz_workflows.dict  inputs_fuzzer.dict  stateful_fuzzer.dict  watermarking_fuzzer.dict
server/fuzz/harness/: __init__.py  app.py  env.py  reset.py
server/fuzz/models/: __init__.py  pdf.py  rest.py
server/fuzz/oracles/: __init__.py  invariants.py  security.py
server/fuzz/scripts/: create_real_seeds.py  run_fuzzing_suite.sh  validate_seeds.py
server/fuzz/targets/: __init__.py  fuzz_pdf_apply.py  fuzz_pdf_explore.py  fuzz_pdf_read.py  fuzz_rest_endpoints.py  fuzz_workflows.py
server/fuzz/utils/: __init__.py  app_setup.py  auth_helpers.py  pdf_generators.py  security_checks.py
server/fuzzers/: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  demo_seed_loading.py  fuzz_pdf_exploration.py  fuzz_watermarking.py  generate_seeds.py  run_fuzzers.sh  verify_fuzzer_setup.py
server/public-keys/pki/: Group13.asc  Group_11.asc  Test_Identity.asc
server/src/: Mutation_Results.txt  add_after_eof.py  config_mutation.toml  gpg_rmap.py  observability.py  rmap_handler.py  rmap_mock.py  robust_xmp_watermark.py  server.py  session.json  signed_annotation_watermark.py  simple_rmap.py  structural_and_overlay_watermark.py  unsafe_bash_bridge_append_eof.py  watermarking_cli.py  watermarking_method.py  watermarking_utils.py
server/src/old methods/: unsafe_bash_bridge_append_eof.py
server/src/static/: documents.html  signup.html
server/test/: API_TEST_SPECIFICATIONS.md  Dockerfile  README_TESTING.md  TEST_README.md  conftest.py  count_mutations.py  counted_mutations.txt  prepare_env.sh  readme_run_tests.txt  run_tests.bat  run_tests.sh  test_api.py  test_api_specification.py  test_api_units.py  test_fuzzing_regression.py  test_rmap.py  test_rmap_README.md  test_rmap_integration.py  test_rmap_routes.py  test_watermarking_all_methods.py  test_watermarking_utilities.py  unittest_structural_overlay_watermark.py
server/test/mock_test_keys/: pv.asc
webhook/: hooks.json
