[project]
name = "Tatou-Server"
version = "0.0.1"
description = "PDF Watermarking platform"
requires-python = ">=3.11"
dependencies = [
	"PyMuPDF>=1.21.1",
	"Flask>=3.0.3",
	"gunicorn>=23.0.0",
	"PyMySQL>=1.1.2",
	"SQLAlchemy>=2.0.43",
	"dill>=0.4.0",
	"cryptography>=3.4.0",
    "PyPDF2>=3.0.0",
    "pgpy>=0.6.0",
    "rmap @ git+https://github.com/SoftSec-13/RMAP-Server.git@v1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pre-commit>=2.20.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "bandit>=1.7.5",
    "sqlfluff>=3.0.0",
    "requests",
    "types-requests>=2.28.11",
    "coverage>=7.5.0",
    "hypothesis>=6.100.0",
    "grpcio-observability>=1.75.1"
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["test/"]
python_files = ["test_*.py"]
pythonpath = ["src"]

[project.scripts]
pdfwm = "watermarking_cli:main"                 # now you can run `pdfwm methods`

[tool.ruff]
# Line length suitable for most projects
line-length = 88
target-version = "py311"

# Exclude directories
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "migrations",
    "venv",
    "env",
]

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # bandit (security)
]

# Ignore specific rules that might conflict with Flask patterns
ignore = [
    "S104",  # Possible binding to all interfaces
    "S105",  # Possible hardcoded password
    "B008",  # Do not perform function calls in argument defaults (common in Flask)
    "S101",  # Use of assert (common in tests)
]

[tool.ruff.lint.per-file-ignores]
# Ignore security rules in test files
"test/**/*.py" = ["S101", "S106", "S108"]
# Ignore import rules in __init__.py files
"__init__.py" = ["F401"]
# Ignore security rules in config files
"config.py" = ["S105", "S106"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["tatou_server"]  # Adjust based on your main module name
split-on-trailing-comma = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
mypy_path = "src"
exclude = [
    "migrations/",
    "venv/",
    ".venv/",
]

[[tool.mypy.overrides]]
module = [
    "PyMuPDF.*",
    "fitz.*",
    "pymysql.*",
    "sqlalchemy.*",
    "flask.*",
    "dill.*",
]
ignore_missing_imports = true

[tool.bandit]
# Exclude test directories from certain bandit checks
# B101: Use of assert (standard in pytest)
# B105: Hardcoded password string (test fixtures use dummy passwords/secrets)
skips = []

[tool.bandit.assert_used]
skips = ["*/test/*", "*/tests/*"]

[[tool.bandit.overrides]]
# Ignore B101 (assert) and B105 (hardcoded password) in test files
paths = ["test"]
skips = ["B101", "B105"]
